Fix background overflow

--- a/fe/src/App.scss
+++ b/fe/src/App.scss
@@ -1,4 +1,4 @@
 .app {
-  height: 100vh;
+  min-height: 100vh;
   background: linear-gradient(to top, #d6d5fb 0%, #f8d7df 100%);
 }
