--- a/fe/src/views/auth/signup/SignupPage.scss
+++ b/fe/src/views/auth/signup/SignupPage.scss
@@ -1,5 +1,6 @@
 .signup-page {
-  height: 90svh;
+  min-height: 90svh;
+  padding-block: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
